--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -28,6 +28,17 @@
   font-size: 1.5rem;
 }
 
+.mainLogo {
+  margin-top: 150px;
+  color: purple;
+}
+
+.mainImg {
+  margin-top: 20px;
+  width: 100%;
+  height: 300px;
+}
+
 .newsDesc {
   h1,
   h2,
